--- a/smart-home/config/rbac/light_editor_role.yaml
+++ b/smart-home/config/rbac/light_editor_role.yaml
@@ -1,10 +1,8 @@
-
----
+# permissions to do edit lights.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
-  name: manager-role
+  name: light-editor-role
 rules:
 - apiGroups:
   - smarthome.loodse.io
@@ -22,24 +20,6 @@ rules:
   - smarthome.loodse.io
   resources:
   - lights/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - smarthome.loodse.io
-  resources:
-  - shutters
-  verbs:
-  - create
-  - get
-  - list
-  - update
-  - watch
-- apiGroups:
-  - smarthome.loodse.io
-  resources:
-  - shutters/status
   verbs:
   - get
   - patch
